# ShardLock

./: .gitignore  README.md  README_IT.md  pyproject.toml
.github/workflows/: tests.yml
shardlock/: crypto.py  main.py  utils.py
