[project]
name = "shardlock"
version = "0.1.0"
description = "File encryption with AES-GCM and Shamir Secret Sharing"
authors = [
    {name = "Antonio", email = "antonio.ruocco2k@hotmail.com"}
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "cryptography",
    "typer",
    "pydantic",
    "rich"
]

[project.scripts]
shardlock = "shardlock.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pyinstaller (>=6.19.0,<7.0.0)"
]
